# GDV-tutorials

./: .gitignore  README.md  pyproject.toml
tutorials/: README.md
tutorials/src/: 01-img-manipulation.problem.py  01-img-manipulation.solution.py  02-pixel-manipulation.problem.py  02-pixel-manipulation.solution.py  03-video-cam.problem.py  03-video-cam.solution.py  04-video-file.problem.py  04-video-file.solution.py  05-drawing.problem.py  05-drawing.solution.py  05-webcam-draw.problem.py  05-webcam-draw.solution.py  06-rgb-to-hsv.bad.py  06-rgb-to-hsv.problem.py  06-rgb-to-hsv.solution.py  07-connected-components.problem.py  07-connected-components.solution.py  08-template-matching.problem.py  08-template-matching.solution.py  09-blur-3d.solution.py  09-blur.problem.py  09-blur.solution.py  10-fourier-transform.problem.py  10-fourier-transform.solution.py  11-transformations.problem.py  11-transformations.solution.py  12-affine-transformation.problem.py  12-affine-transformation.solution.py  13-proj-transformation.problem.py  13-proj-transformation.solution.py  14-edge-detection.problem.py  14-edge-detection.solution.py  15-feat-detection.problem.py  15-feat-detection.solution.py  16-harris-corner.problem.py  16-harris-corner.solution.py  17-blob-detector.problem.py  17-blob-detector.solution.py  18-sift.problem.py  18-sift.solution.py  (+9 more)
tutorials/src/utils/: README.md  duckduckgo_image_search.py  get-image-from-web.py  get_image_from_web.py  matrix_multiplication.py
