[project]
name        = "tutorials-SoSe23"
version     = "0.0.1"
description = "Grafische Datenverarbeitung an der HFU"
readme      = "README.md"
authors     = [
  { name = "Uwe Hahne", email = "uwe.hahne@hs-furtwangen.de" },
  { name = "Techassi", email = "git@techassi.dev" }
]
keywords    = ["opencv", "computer", "vision"]
requires-python = ">=3.9.0"
dependencies    = [
  "click==8.1.3",
  "mypy-extensions==0.4.3",
  "numpy==1.24.1",
  "opencv-python==4.7.0.68",
  "pathspec==0.11.0",
  "platformdirs==2.6.2",
  "pycodestyle==2.10.0",
  "toml==0.10.2",
  "tomli==2.0.1",
  "yapf==0.32.0"
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
