[project]
name        = "tutorials-GDV"
version     = "0.0.3"
description = "Grafische Datenverarbeitung an der HFU"
readme      = "README.md"
authors     = [
  { name = "Uwe Hahne", email = "uwe.hahne@hfu.eu" },
  { name = "Techassi", email = "git@techassi.dev" },
  { name = "Fabian Mieg", email = "fabian.alexander.mieg@hs-furtwangen.de" }
]
keywords    = ["opencv", "computer vision", "visual computing", "teaching"]
requires-python = ">=3.9.0"
dependencies    = [
  "click>=8.1.3",
  "mypy-extensions>=0.4.3",
  "numpy>=1.24.1",
  "opencv-python>=4.8.0.74",
  "pathspec>=0.11.0",
  "platformdirs>=2.6.2",
  "pycodestyle>=2.10.0",
  "toml>=0.10.2",
  "tomli>=2.0.1",
  "yapf>=0.32.0",
  "ultralytics>=8.0.117"
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
