[project]
name        = "tutorials-GDV"
version     = "0.0.4"
description = "Grafische Datenverarbeitung an der HFU"
readme      = "README.md"
authors     = [
  { name = "Uwe Hahne", email = "uwe.hahne@hfu.eu" },
  { name = "Techassi", email = "git@techassi.dev" },
  { name = "Fabian Mieg", email = "fabian.alexander.mieg@hs-furtwangen.de" }
]
keywords    = ["opencv", "computer vision", "visual computing", "teaching"]
requires-python = ">=3.9.0"
dependencies    = [
  "numpy>=1.24.1",
  "opencv-python>=4.8.0.74",
  "black>=25.9.0",
  #  "ultralytics>=8.0.117"
]
